# pypi-template

./: .gitignore  .pdm.toml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  install-smoke.yml  publish-test.yml  publish.yml
package_src/: __init__.py
src/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  pyproject.toml
src/.github/workflows/: publish-test.yml  publish.yml  release.yml
src/package_src/: __init__.py
tests/: test_template.py
