[build-system]
requires = ["pdm-backend>=2.4.0"]
build-backend = "pdm.backend"

[project]
name = "${PYTHON_PACKAGE}"
version = "0.0.0-dev.1"
description = "${PYTHON_PACKAGE} python package."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "${AUTHOR_NAME}", email = "${AUTHOR_EMAIL}" },
]
keywords = ["json", "type-hints", "typing", "validation", "jsondata", "serialization"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/${GITHUB_OWNER_NAME}/${GITHUB_PROJECT_NAME}"
Source = "https://github.com/${GITHUB_OWNER_NAME}/${GITHUB_PROJECT_NAME}"
"Bug Tracker" = "https://github.com/${GITHUB_OWNER_NAME}/${GITHUB_PROJECT_NAME}/issues"
Changelog = "https://github.com/${GITHUB_OWNER_NAME}/${GITHUB_PROJECT_NAME}/releases"

[dependency-groups]
dev = [
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
    "pdm>=2.27.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["${PYTHON_MODULE}"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["${PYTHON_MODULE}"]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["${PYTHON_MODULE}"]

[tool.pdm.scripts]
test = "pytest"
lint = "ruff check ."
typecheck = "mypy ${PYTHON_MODULE}"
post_install = "./bin/post-install"
